<resources>
    <!--shared  -->
    <string name="app_name">FinalProject</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="help">help</string>
    <string name="main_help_content">
        Authors：\n
        Foreign Currency Conversion API\n
        ---->Sijie Chen\n\n

        Electrical Car Charging Station Finder\n
        ---->Jennifer Yuan\n\n

        Recipe Search Engine\n
        ---->Shuting Yang\n\n

        News Api.org Headlines API\n
        ---->Shengqiang Huang\n\n
    </string>


    <!--    ECCSF-->
    <string name="ECCSF_map">Load directions in google maps</string>
    <string name="ECCSF_latitude">Latitude: </string>
    <string name="ECCSF_longitude">Longitude: </string>
    <string name="ECCSF_hint_latitude">45.34757</string>
    <string name="ECCSF_hint_longitude">-75.756140</string>
    <string name="ECCSF_search">Search the location</string>
    <string name="ECCSF_back">go back</string>
    <string name="ECCSF_back_to_main">go back to main</string>
    <string name="ECCSF_add_fav">add to favorites</string>
    <string name="ECCSF_del_fav">delete from favorites</string>
    <string name="ECCSF_saved">saved</string>
    <string name="ECCSF_btn_goto_fav">go to favorites</string>
    <string name="ECCSF_detail_page">Details For the Station</string>
    <string name="ECCSF_fav_page">Your Favorite Stations</string>
    <string name="ECCSF_empty_list">You Don\'t Have Saved Favorite Stations</string>
    <string name="ECCSF_success_added">Successfully added to favorite stations</string>
    <string name="ECCSF_success_deleted">Successfully deleted from favorite stations</string>
    <string name="ECCSF_toolbar_self">You\'re already in this application</string>
    <string name="ECCSF_delete_confirm">Are you sure to delete it from your favorites?</string>
    <string name="ECCSF_cancel">cancel</string>
    <string name="ECCSF_delete">delete</string>
    <string name="ECCSF_yes">yes</string>
    <string name="ECCSF_help_content"> Author: Jennifer Yuan \nVersion: 1.1.3\n\n
                        You can search for electric car charging stations within a given area.\n\n
                        •\tAfter you input a latitude and longitude location, the server returns a list of charging stations near that location.\n
                        •\tYou can then select an item from the list and see details about that charging station.\n
                        \nIn detail page, the station is displaying:\n
                        \to\tLocation Title\n
                        \to\tLatitude\n
                        \to\tLongitude\n
                        \to\tContact Telephone number\n
                        \to\tA “load directions in google maps” button which loads the latitude and longitude in the google maps activity.\n\n
                        •\tYou are able to save a charging station into a list of favourites, saved in a database.\n
                        \t\tThis list is accessible from a menu item. You can remove items from the list and database.\n
                        .\tThe application saves the last item searched to display the next time the application is launched.</string>

    <!--    Currency-->
  <string name="CurrencyCalButton">Calculate</string>
    <string name="currencyRateOutput">0.0</string>
    <string name="currencyAmount">Amount</string>
    <string name="currencyAmountInput">Input Amount</string>
    <string name="currencyFromText">From</string>
    <string name="currencyFromInput"></string>
    <string name="currencyToText">To</string>
    <string name="currencyResultText">Result</string>
    <string name="currencyResultOutput">Result</string>
    <string name="CurrencyEnterButton">Enter</string>
    <string name="CurrencySaveButton">Save to Favorite</string>
    <string name="currency_menu_home">Home</string>
    <string name="currency_menu_favorite">Favorite</string>
    <string name="CurrencyHomeButton">Home</string>
    <string name="CurrencyFavoriteButton">Favorite</string>
    <string name="CurrencyDeleteButton">Delete</string>
    <string name="CurrencyDetailButton">Detail</string>
    <string name="currencyRateText">rate</string>
    <string name="currentFavariteConnectionText">Current Rate is</string>
    <string name="CurrencyReturnButton">Return</string>
    <string name="currency_car">car</string>
    <string name="currency">currency</string>
    <string name="currency_news">news</string>
    <string name="currency_recipe">recipe</string>
    <string name="currency_help">Help</string>
    <string name="currency_alert_title">Alert</string>
    <string name="currency_alert_message">Do you want to delete?</string>
    <string name="currency_alert_delete_button">Delete</string>
    <string name="currency_alert_cancel_button">Cancel</string>
    <string name="currency_help_menu_message">Author name-Sijie Chen\n Acticity Version Number-1.0\n Users put amount and select the convert from currency and select convert to currency. The result will be shown. Users can also save the from/to currency as favorite for future use</string>
    <string name="currency_toolbar_menu_favorite">Favorite</string>
    <string name="currency_toast_enterButton">Calculating</string>
    <string name="currency_snackbar_saveButton">Saved to favorite</string>

    <!--  Steve-->
    <string name="SteveName">Shengqiang Huang</string>
    <string name="s1">-Enter a search term and click search</string>
    <string name="s2">-Select an item from the list to view more item details</string>
    <string name="s3">-Choose the button to view a list of previously saved articles</string>
    <string name="NewsView">View article in web browser</string>
    <string name="NewsSave">Add to Favorites</string>
    <string name="Newsback">Go Back</string>
    <string name="news">News</string>
    <string name="NewsSearchButton">Search</string>
    <string name="NewsGoToFavoritesButton">Go to Favorites</string>
    <string name="NewsGoBackToMainButton">Go Back to Main</string>
    <string name="NewsGoBackButton">Go Back</string>
    <string name="help_menu_title_text">Help</string>
    <string name="news_welcome">Welcome to News Search</string>
    <string name="News_detail_page">News Details</string>
    <string name="News_favorite_welcome">Your Favorite News</string>
    <string name="News_delete">Delete</string>
    <string name="News_delete_from_fav">Delete from favourite</string>
    <string name="News_delete_confirm">Are you sure to delete?</string>
    <string name="News_yes">Yes</string>
    <string name="News_cancel">Cancel</string>


    <!-- Restaurant Recipe-->
    <string name="prompt_to_enter">Please enter something before you search. </string>
    <string name="recipeSearchTitle">Search results:  </string>
    <string name="recipeApiTitle">Recipe list</string>
    <string name="recipeSearchButton">Search</string>
    <string name="recipeSearchTV">Are you hungry?</string>
    <string name="recipe_insert" >Saved to favourite</string>
    <string name="recipe_insert_error">recipe cannot insert into database</string>
    <string name="recipe_add_fav">add to favourite</string>
    <string name="recipe_del_fav" >delete from favourite</string>
    <string name="recipe_fav_title">Favourite List</string>
</resources>
