<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/choice1"
        android:title="@string/currency_car"
        android:icon="@drawable/icon_car"
        android:orderInCategory="10"
        app:showAsAction="always"/>

    <item android:id="@+id/choice2"
        android:icon="@drawable/icon_news"
        app:showAsAction="always|collapseActionView"
        android:orderInCategory="20"
        android:title="@string/currency_news"/>

    <item android:id="@+id/choice3"
        android:icon="@drawable/icon_recipe"
        app:showAsAction="always|collapseActionView"
        android:orderInCategory="30"
        android:title="@string/currency_recipe"/>


    <item android:id="@+id/choice4"

        app:showAsAction="never"
        android:orderInCategory="40"
        android:title="@string/currency_help"
        />





</menu>