<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/currencyFavoriteFromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencyFromText"
        android:textSize="30dp" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/connectionMark"
        android:text="->"
        android:textSize="30dp"
        />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/currencyFavoriteToText"
        android:text="@string/currencyToText"
        android:textSize="30dp"
        />


</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currencyFavoriteCurrentText"
        android:text="@string/currentFavariteConnectionText"
        android:textSize="30dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currencyFavoriteRateText"
        android:text="@string/currencyRateText"
        android:textSize="30dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/CurrencyDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/CurrencyDeleteButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/CurrencyReturnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/CurrencyReturnButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            />




    </RelativeLayout>




</LinearLayout>