<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/ECCSF_detail_page"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:id="@+id/detail_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/car_text_title"
        android:layout_below="@+id/detail_title"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_latitude"
        android:layout_below="@+id/car_text_title"
        android:textSize="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_longitude"
        android:layout_below="@+id/text_latitude"
        android:textSize="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_phoneNo"
        android:layout_below="@+id/text_longitude"
        android:textSize="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_address"
        android:layout_below="@+id/text_phoneNo"
        android:textSize="15dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/ECCSF_map"
        android:id="@+id/car_btn_map"
        android:layout_below="@+id/text_address"/>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ECCSF_add_fav"
        android:id="@+id/car_btn_add_fav"
        android:layout_below="@+id/car_btn_map"/>


    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ECCSF_del_fav"
        android:id="@+id/car_btn_del_fav"
        android:layout_below="@+id/car_btn_map"/>


    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/ECCSF_back"
        android:id="@+id/car_btn_back"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>